# tauri-plugin-rusqlite2

./: .gitignore  Cargo.toml  README.md  api-iife.js  build.rs  package.json  pnpm-lock.yaml
example/: package.json  pnpm-lock.yaml  svelte.config.js
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/capabilities/: default.json
example/src-tauri/src/: lib.rs  migration.rs
example/src/routes/: +page.svelte
guest-js/: README.md  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: migrate.toml
permissions/schemas/: schema.json
src/: commands.rs  convert.rs  desktop.rs  error.rs  lib.rs  mobile.rs  utils.rs
