[package]
name = "tauri-plugin-rusqlite"
version = "2.0.1"
authors = ["Rohit Singh"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-rusqlite"


[package.metadata.docs.rs]
features = ["sqlite"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms.support]
windows = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
android = { level = "full", notes = "" }
ios = { level = "full", notes = "" }

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }

[dependencies]
tauri = { version = "2.7.0" }
serde = "1.0.219"
thiserror = "2.0.12"
serde_json = "1.0.141"
log = "0.4.27"
rusqlite = { version = "0.37.0", features = ["bundled"] }
indexmap = { version = "2.10.0", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
base64 = "0.22.1"
rusqlite_migration = "2.3.0"
futures-core = "0.3.31"
tokio = "1.47.0"

[features]
default = ["sqlite"]
sqlite = []

[dev-dependencies]
tauri = { version = "2.7.0", features = ["test"] }
tempfile = "3.20.0"                                # Added for file DB tests
