[package]
name = "tauri-plugin-rusqlite2"
version = "2.2.3"
authors = ["Rohit Singh <razein@wizql.com>"]
description = "Tauri SQLite plugin using rusqlite"
edition = "2021"
readme = "README.md"
rust-version = "1.77.2"
keywords = ["tauri-plugin", "tauri", "sql", "sqlite", "rusqlite"]
repository = "https://github.com/razein97/tauri-plugin-rusqlite2"
license = "MIT OR Apache-2.0"
exclude = ["/examples", "/example", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-rusqlite2"


[package.metadata.docs.rs]
features = []
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms.support]
windows = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
android = { level = "full", notes = "" }
ios = { level = "full", notes = "" }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2" }
serde = "1"
thiserror = "2"
serde_json = "1"
log = "0.4"
rusqlite = { version = "0.37.0", features = [
  "array",
"backup",
"blob",
"chrono",
"collation",
"column_decltype",
"column_metadata",
"csvtab",
"extra_check",
"functions",
"hooks",
"i128_blob",
"jiff",
"limits",
"load_extension",
"modern_sqlite",
"serde_json",
"serialize",
"series",
"time",
"trace",
"url",
"uuid",
"vtab",
"window"
] }
indexmap = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
rusqlite_migration = "2"
futures-core = "0.3"
tokio = "1"



[features]
default = ["rusqlite/bundled-sqlcipher", "rusqlite/unlock_notify"]
unbundled = ["rusqlite/sqlcipher"]
bundled-sqlcipher-vendored-openssl = ["rusqlite/bundled-sqlcipher-vendored-openssl",]

